--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": {
-    "CrudDb": "Server=localhost,1433; Database=testdb; User=sa; Password =crudapp123!;"
+  "IdentityServer": {
+    "Key": {
+      "Type": "Development"
+    }
   }
 }
