--- a/appsettings.json
+++ b/appsettings.json
@@ -1,14 +1,20 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433; Database=testdb; User=sa; Password =crudapp123!;"
+  },
   "Logging": {
-    "LogLevel": {
+      "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+  "IdentityServer": {
+    "Clients": {
+      "crud_app_take2": {
+        "Profile": "IdentityServerSPA"
+      }
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "CrudDb": "Server=localhost,1433; Database=testdb; User=sa; Password =crudapp123!;",
-    "IdentityDataContextConnection": "Server=localhost,1433; Database=testdb; User=sa; Password =crudapp123!;"
-  }
+"AllowedHosts": "*"
 }
