--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -14,16 +14,19 @@
   "dependencies": {
     "@angular/animations": "8.2.12",
     "@angular/cdk": "~8.2.3",
-    "@angular/common": "8.2.12",
-    "@angular/compiler": "8.2.12",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^8.2.14",
     "@angular/core": "8.2.12",
+    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "8.2.12",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "8.2.12",
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
+    "@kla-shared/ngx-kla-material-core": "5.0.1-DEV-26.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
