--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -8,45 +8,51 @@
     "build:ssr": "ng run crud_app_take2:server:dev",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.12",
-    "@angular/cdk": "~8.2.3",
+    "@angular-devkit/schematics": "^11.1.4",
+    "@angular/animations": "9.1.13",
+    "@angular/cdk": "9.2.4",
     "@angular/common": "^9.1.13",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "8.2.12",
-    "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "8.2.12",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "8.2.12",
-    "@angular/platform-browser-dynamic": "8.2.12",
-    "@angular/platform-server": "8.2.12",
-    "@angular/router": "8.2.12",
-    "@kla-shared/ngx-kla-material-core": "5.0.1-DEV-26.0",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/flex-layout": "11.0.0-beta.33",
+    "@angular/forms": "9.1.13",
+    "@angular/material": "^9.0.0",
+    "@angular/material-moment-adapter": "9.2.2",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "9.1.13",
+    "@angular/platform-server": "9.1.13",
+    "@angular/router": "9.1.13",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
+    "angular2-text-mask": "9.0.0",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
     "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
+    "moment": "2.24.0",
     "ngx-material-file-input": "^2.1.1",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
-    "zone.js": "0.9.1"
+    "tslib": "^1.10.0",
+    "vanilla-text-mask": "5.1.1",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.12",
+    "@angular-devkit/build-angular": "^0.901.14",
+    "@angular/cli": "^9.1.14",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~12.11.6",
-    "codelyzer": "^5.2.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^5.0.2",
@@ -54,7 +60,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "typescript": "3.5.3"
+    "typescript": "3.8.3"
   },
   "optionalDependencies": {
     "node-sass": "^5.0.0",
