--- a/ClientApp/src/tsconfig.app.json
+++ b/ClientApp/src/tsconfig.app.json
@@ -5,8 +5,11 @@
     "types": [],
     "skipLibCheck": true
   },
-  "exclude": [
-    "src/test.ts",
-    "**/*.spec.ts"
+  "files": [
+    "main.ts",
+    "polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
