--- a/ClientApp/src/tsconfig.server.json
+++ b/ClientApp/src/tsconfig.server.json
@@ -6,5 +6,11 @@
   },
   "angularCompilerOptions": {
     "entryModule": "app/app.server.module#AppServerModule"
-  }
+  },
+  "files": [
+    "main.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
